--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>E-commerce App</title>
+  <title i18n>E-commerce App</title>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
